# Ctrl-Custo

./: .eslintrc.cjs  .gitignore  .prettierignore  BUSINESS_RULES.md  CLAUDE.md  CONTEXT.md  LICENSE  PROJECT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml  eas.yml  maestro-cloud.yml  tauri.yml
.maestro/: dashboard.yaml  goals.yaml  login.yaml  reports.yaml  settings.yaml  transactions.yaml
apps/api/: .env.example  .env.test.example  ecosystem.config.cjs  ecosystem.config.js  package.json  tsconfig.json  vitest.config.ts
apps/api/drizzle/: 0000_violet_shriek.sql  0001_email_verification.sql  0002_db_schemas.sql  0003_transfer_destination.sql  0004_goal_id_on_transactions.sql
apps/api/src/: app.ts  index.ts
apps/mobile/: app.json  jest.config.js  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  login.tsx
apps/mobile/src/: polyfills.ts
apps/web/: .env.production  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/e2e/: cards.spec.ts  goals.spec.ts  reports.spec.ts  settings.spec.ts  (+2 more)
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: main.rs
deploy/: backup.sh  deploy.sh  first-run.sh  nginx.conf  setup.sh
deploy/fail2ban/: ctrl-custo-api.conf  jail.local
docs/: TESTE_MOBILE_PARIDADE.md  test-coverage.md
scripts/: find-dep.ps1  setup-vm-keep-alive.ps1  show-dep-context.ps1  vm-keep-alive.sh
(+100 files in other folders)
