[package]
name = "ctrl-custo"
version = "0.1.0"
description = "Ctrl-Custo — Personal finance desktop app"
authors = []
edition = "2021"

[lib]
name = "ctrl_custo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
